; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2web.c___system.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2web.c___system.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i8*, i8*)* }

@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_3__*, i32*, i8*)* @__system to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @__system(%struct.TYPE_3__* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i8, i8* %13, align 1
  %15 = icmp ne i8 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %44

17:                                               ; preds = %3
  %18 = load i8*, i8** %7, align 8
  %19 = call i8* @r_str_uri_encode(i8* %18)
  store i8* %19, i8** %10, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @rURL(i32* %20)
  %22 = load i8*, i8** %10, align 8
  %23 = call i8* @r_str_newf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %21, i8* %22)
  store i8* %23, i8** %11, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = call i8* @r_socket_http_get(i8* %24, i32* %8, i32* %9)
  store i8* %25, i8** %12, align 8
  %26 = load i8*, i8** %12, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %37

28:                                               ; preds = %17
  %29 = load i32, i32* %9, align 4
  %30 = icmp sgt i32 %29, 0
  br i1 %30, label %31, label %37

31:                                               ; preds = %28
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %33, align 8
  %35 = load i8*, i8** %12, align 8
  %36 = call i32 %34(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  br label %37

37:                                               ; preds = %31, %28, %17
  %38 = load i8*, i8** %12, align 8
  %39 = call i32 @free(i8* %38)
  %40 = load i8*, i8** %11, align 8
  %41 = call i32 @free(i8* %40)
  %42 = load i8*, i8** %10, align 8
  %43 = call i32 @free(i8* %42)
  store i8* null, i8** %4, align 8
  br label %44

44:                                               ; preds = %37, %16
  %45 = load i8*, i8** %4, align 8
  ret i8* %45
}

declare dso_local i8* @r_str_uri_encode(i8*) #1

declare dso_local i8* @r_str_newf(i8*, i32, i8*) #1

declare dso_local i32 @rURL(i32*) #1

declare dso_local i8* @r_socket_http_get(i8*, i32*, i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
